--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <input type="text" name="name" placeholder="username" required><br>
         <label for="name">password</label>
         <input type="password" name="name" placeholder="password" required><br>
-        <label for="name">email</label>
+        <label for="name">Email</label>
         <input type="email" name="name" placeholder="email" required><br>
         <label for="name">phonenumber</label>
         <input type="number" name="name" placeholder="phonenumber" required><br>
