--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <input type="email" name="name" placeholder="email" required><br>
         <label for="name">phonenumber</label>
         <input type="number" name="name" placeholder="phonenumber" required><br>
-        <button value="SUBMIT">register</button>
+        <button value="SUBMIT">Register</button>
     </center>
 </body>
 </html>
