--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <center>
-        <label for="name">username</label>
+        <label for="name">Username</label>
         <input type="text" name="name" placeholder="username" required><br>
         <label for="name">password</label>
         <input type="password" name="name" placeholder="password" required><br>
